--- a/assets/css/ani1.css
+++ b/assets/css/ani1.css
@@ -1,10 +1,10 @@
 .ani1
-    
+
 h1 {
-       
+
      font-family: Arial, Helvetica, sans-serif;
 
-   
+
 }
 
 
@@ -12,10 +12,37 @@ h1 span {
 
     animation: bounce .3s ease infinite alternate;
     font-size: 40px;
-      
+
 }
 
+h1 span:nth-child(2) {
 
+    animation-delay: .1s;
+}
+
+h1 span:nth-child(3) {
+    animation-delay: .2s;
+}
+
+h1 span:nth-child(4) {
+    animation-delay: .3s;
+}
+
+h1 span:nth-child(5) {
+    animation-delay: .4s;
+}
+
+h1 span:nth-child(6) {
+    animation-delay: .5s;
+}
+
+h1 span:nth-child(7) {
+    animation-delay: .6s;
+}
+
+h1 span:nth-child(8) {
+    animation-delay: .7s;
+}
 
 @keyframes bounce {
     100% {
